--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
+    "@types/styled-components": "^5.1.26",
+    "@types/styled-components-react-native": "^5.1.3",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "babel-eslint": "^10.1.0",
     "babel-plugin-module-resolver": "^4.1.0",
@@ -32,6 +35,9 @@
     "eslint-plugin-promise": "^6.0.0",
     "prettier": "^2.7.1",
     "typescript": "*"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   },
   "private": true
 }
